fixing accordion height  on ios

--- a/source/sass/blocks/components/data-accordion.scss
+++ b/source/sass/blocks/components/data-accordion.scss
@@ -1,6 +1,5 @@
 [data-accordion="element"].is-active > [data-accordion="content"] {
-  min-height: 100%;
-  overflow: hidden;
+  max-height: 100%;
 }
 
 [data-accordion="parent"].no-transition [data-accordion="content"] {
